--- a/index.html
+++ b/index.html
@@ -1,58 +1,75 @@
 <!doctype html>
 <html lang="en">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Traffic Map</title>
+<meta charset="utf-8"/>
+<meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Traffic StoryMap</title>
 
-<link href="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.css" rel="stylesheet">
+<link href="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.css" rel="stylesheet"/>
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 
 <style>
-html,body{height:100%;margin:0}
-#map{position:absolute;top:0;bottom:0;width:100%}
-.panel{
-position:absolute;top:12px;left:12px;width:360px;
-background:white;border-radius:12px;
-box-shadow:0 10px 30px rgba(0,0,0,.15);
-padding:12px;font-family:system-ui;font-size:13px}
-.legend{height:10px;border-radius:999px;
-background:linear-gradient(90deg,#2c7bb6,#abd9e9,#ffffbf,#fdae61,#d7191c)}
-.popup-media img,.popup-media video{
-width:100%;border-radius:8px}
+html,body{margin:0;height:100%;font-family:system-ui}
+.container{display:flex;height:100%}
+#story{width:32%;overflow-y:auto;padding:20px;background:#fafafa;border-right:1px solid #ddd}
+#map{flex:1}
+h2{margin-top:40px}
+.control{margin-top:15px}
+.legend{height:12px;border-radius:8px;margin-top:6px}
+.slider{width:100%}
 </style>
 </head>
 
 <body>
-<div id="map"></div>
+<div class="container">
+<div id="story">
 
-<div class="panel">
-<b>Intersections & Media</b><br>
-<label><input type="checkbox" id="toggleIntersections" checked> Intersections</label>
-<label><input type="checkbox" id="toggleMedia" checked> Media</label>
+<h1>Traffic Analysis StoryMap</h1>
 
-<div style="margin-top:8px">
-Style intersections by:
-<select id="attrSelect"></select>
-<div class="legend"></div>
+<div class="control">
+<b>Color Field</b>
+<select id="fieldSelect"></select>
 </div>
 
-<div id="status" style="margin-top:8px;color:#444"></div>
+<div class="control">
+<b>Color Palette</b>
+<select id="paletteSelect">
+<option value="blueRed">Blue → Red</option>
+<option value="viridis">Viridis</option>
+<option value="plasma">Plasma</option>
+</select>
+<div id="legend" class="legend"></div>
+</div>
+
+<div class="control">
+<b>Point Size</b>
+<input type="range" min="3" max="20" value="7" id="sizeSlider" class="slider">
+</div>
+
+<div class="control">
+<b>Layer Order</b><br>
+<button onclick="bringToFront('intersection-layer')">Intersections Front</button>
+<button onclick="bringToFront('media-layer')">Media Front</button>
+</div>
+
+<h2>Section 1: Total Traffic</h2>
+<p>Visualizing overall traffic intensity across intersections.</p>
+
+<h2>Section 2: Mode Share</h2>
+<p>Exploring modal composition patterns.</p>
+
+</div>
+<div id="map"></div>
 </div>
 
 <script>
 
-// ================= CONFIG =================
-mapboxgl.accessToken =
-"pk.eyJ1IjoiZGVmZmllIiwiYSI6ImNtbTNqMmMxODAxaDAycXMyN255eWFwaGIifQ.X5T0rb3Cm_p1wZEYIAGfYQ";
+mapboxgl.accessToken="pk.eyJ1IjoiZGVmZmllIiwiYSI6ImNtbTNqMmMxODAxaDAycXMyN255eWFwaGIifQ.X5T0rb3Cm_p1wZEYIAGfYQ";
 
-const R2_BASE =
-"https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
-
+const R2_BASE="https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
 const INTERSECTION_CSV="intersection.csv";
 const MEDIA_CSV="media_locations.csv";
-// ==========================================
 
 const map=new mapboxgl.Map({
 container:"map",
@@ -63,67 +80,47 @@ zoom:13
 
 map.addControl(new mapboxgl.NavigationControl());
 
-function csvUrl(name){
-return R2_BASE.replace(/\/$/,"")+"/"+name;
-}
+function csvUrl(n){return R2_BASE+"/"+n;}
 
-function parseNumber(x){
-const v=Number(x);
-return Number.isFinite(v)?v:null;
-}
-
-function toGeo(rows,lonKey,latKey){
-const f=[];
-rows.forEach(r=>{
-const lon=parseNumber(r[lonKey]);
-const lat=parseNumber(r[latKey]);
-if(lon!=null&&lat!=null){
-f.push({
+function toGeo(rows,lon,lat){
+return {
+type:"FeatureCollection",
+features:rows.filter(r=>r[lon]&&r[lat])
+.map(r=>({
 type:"Feature",
-geometry:{type:"Point",coordinates:[lon,lat]},
+geometry:{type:"Point",coordinates:[+r[lon],+r[lat]]},
 properties:r
-});
-}});
-return {type:"FeatureCollection",features:f};
+}))
+};
+}
+
+function getPalette(name){
+if(name==="viridis")
+return ["#440154","#3b528b","#21918c","#5ec962","#fde725"];
+if(name==="plasma")
+return ["#0d0887","#7e03a8","#cc4678","#f89441","#f0f921"];
+return ["#2c7bb6","#abd9e9","#ffffbf","#fdae61","#d7191c"];
 }
 
 async function fetchCSV(url){
 return new Promise((res,rej)=>{
-Papa.parse(url,{
-download:true,header:true,
-complete:r=>res(r.data),
-error:e=>rej(e)
-});
+Papa.parse(url,{download:true,header:true,complete:r=>res(r.data)});
 });
 }
 
 async function init(){
 
-document.getElementById("status").innerText="Loading CSV...";
-
-let interRows,mediaRows;
-try{
-[interRows,mediaRows]=await Promise.all([
+const [iRows,mRows]=await Promise.all([
 fetchCSV(csvUrl(INTERSECTION_CSV)),
 fetchCSV(csvUrl(MEDIA_CSV))
 ]);
-}catch(e){
-document.getElementById("status").innerText=
-"CSV load failed (CORS or filename issue)";
-return;
-}
 
-const intersectionGeo=toGeo(interRows,"lon","lat");
-const mediaGeo=toGeo(mediaRows,"Longitude","Latitude");
+const iGeo=toGeo(iRows,"lon","lat");
+const mGeo=toGeo(mRows,"Longitude","Latitude");
 
-document.getElementById("status").innerText=
-"Loaded: intersections="+intersectionGeo.features.length+
-", media="+mediaGeo.features.length;
+map.on("load",()=>{
 
-// ========= Add layers safely =========
-function addLayers(){
-
-map.addSource("intersections",{type:"geojson",data:intersectionGeo});
+map.addSource("intersections",{type:"geojson",data:iGeo});
 map.addLayer({
 id:"intersection-layer",
 type:"circle",
@@ -136,7 +133,7 @@ paint:{
 }
 });
 
-map.addSource("media",{type:"geojson",data:mediaGeo});
+map.addSource("media",{type:"geojson",data:mGeo});
 map.addLayer({
 id:"media-layer",
 type:"circle",
@@ -149,79 +146,70 @@ paint:{
 }
 });
 
-// ===== dropdown numeric fields =====
-const numericCols=Object.keys(interRows[0])
-.filter(k=>interRows.some(r=>!isNaN(parseFloat(r[k]))));
+const numericCols=Object.keys(iRows[0])
+.filter(k=>!isNaN(parseFloat(iRows[0][k])));
 
-const select=document.getElementById("attrSelect");
+const select=document.getElementById("fieldSelect");
 numericCols.forEach(c=>{
-const opt=document.createElement("option");
-opt.value=c;opt.textContent=c;
-select.appendChild(opt);
+const o=document.createElement("option");
+o.value=c;o.textContent=c;
+select.appendChild(o);
 });
 
-if(numericCols.includes("count_total"))
 select.value="count_total";
+updateColor();
 
-select.addEventListener("change",()=>{
-const attr=select.value;
+select.addEventListener("change",updateColor);
+document.getElementById("paletteSelect")
+.addEventListener("change",updateColor);
+
+document.getElementById("sizeSlider")
+.addEventListener("input",e=>{
 map.setPaintProperty("intersection-layer",
-"circle-color",
-["interpolate",["linear"],
-["to-number",["get",attr]],
-0,"#2c7bb6",
-100,"#d7191c"]);
+"circle-radius",+e.target.value);
 });
 
-// ===== popups =====
 map.on("click","intersection-layer",e=>{
 const p=e.features[0].properties;
 let html="";
-Object.keys(p).forEach(k=>{
-html+=`<b>${k}</b>: ${p[k]}<br>`;
-});
-new mapboxgl.Popup()
-.setLngLat(e.lngLat)
-.setHTML(html)
-.addTo(map);
+for(let k in p){html+=`<b>${k}</b>: ${p[k]}<br>`}
+new mapboxgl.Popup().setLngLat(e.lngLat).setHTML(html).addTo(map);
 });
 
 map.on("click","media-layer",e=>{
 const p=e.features[0].properties;
-const url=p.URL||p.url||"";
+const url=p.URL||p.url;
 let html="";
 if(url.match(/\.(mp4|mov|webm)$/i)){
-html=`<div class="popup-media">
-<video controls src="${url}"></video></div>`;
+html=`<video controls src="${url}" width="250"></video>`;
 }else{
-html=`<div class="popup-media">
-<img src="${url}"></div>`;
+html=`<img src="${url}" width="250">`;
 }
-new mapboxgl.Popup()
-.setLngLat(e.lngLat)
-.setHTML(html)
-.addTo(map);
+new mapboxgl.Popup().setLngLat(e.lngLat).setHTML(html).addTo(map);
 });
 
-// ===== toggles =====
-document.getElementById("toggleIntersections")
-.addEventListener("change",e=>{
-map.setLayoutProperty("intersection-layer",
-"visibility",e.target.checked?"visible":"none");
 });
 
-document.getElementById("toggleMedia")
-.addEventListener("change",e=>{
-map.setLayoutProperty("media-layer",
-"visibility",e.target.checked?"visible":"none");
-});
+function updateColor(){
+const field=document.getElementById("fieldSelect").value;
+const palette=getPalette(document.getElementById("paletteSelect").value);
 
+map.setPaintProperty("intersection-layer","circle-color",[
+"interpolate",["linear"],
+["to-number",["get",field]],
+0,palette[0],
+100,palette[4]
+]);
+
+document.getElementById("legend").style.background=
+`linear-gradient(to right,${palette.join(",")})`;
 }
 
-// Ensure map is ready
-if(map.loaded()) addLayers();
-else map.on("load",addLayers);
+}
 
+function bringToFront(id){
+const layers=map.getStyle().layers;
+map.moveLayer(id,layers[layers.length-1].id);
 }
 
 init();
