--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Traffic StoryMap</title>
+<title>Traffic Scroll Story</title>
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.css" rel="stylesheet"/>
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.js"></script>
@@ -12,12 +12,14 @@
 <style>
 html,body{margin:0;height:100%;font-family:system-ui}
 .container{display:flex;height:100%}
-#story{width:32%;overflow-y:auto;padding:20px;background:#fafafa;border-right:1px solid #ddd}
+#story{width:32%;overflow-y:auto;padding:20px;background:#f7f7f7;border-right:1px solid #ddd}
 #map{flex:1}
-h2{margin-top:40px}
-.control{margin-top:15px}
-.legend{height:12px;border-radius:8px;margin-top:6px}
+section{margin-bottom:80px}
+h2{margin-top:60px}
+.legend{height:14px;border-radius:8px;margin-top:6px}
 .slider{width:100%}
+.control{margin-top:15px}
+button{margin-top:4px}
 </style>
 </head>
 
@@ -25,39 +27,92 @@ h2{margin-top:40px}
 <div class="container">
 <div id="story">
 
-<h1>Traffic Analysis StoryMap</h1>
-
-<div class="control">
-<b>Color Field</b>
-<select id="fieldSelect"></select>
-</div>
+<h1>Traffic StoryMap</h1>
 
 <div class="control">
 <b>Color Palette</b>
-<select id="paletteSelect">
-<option value="blueRed">Blue → Red</option>
-<option value="viridis">Viridis</option>
-<option value="plasma">Plasma</option>
+<select id="palette">
+<option value="blue">Blue</option>
+<option value="red">Red</option>
+<option value="green">Green</option>
+<option value="purple">Purple</option>
 </select>
 <div id="legend" class="legend"></div>
+<div id="legendLabel"></div>
 </div>
 
 <div class="control">
-<b>Point Size</b>
-<input type="range" min="3" max="20" value="7" id="sizeSlider" class="slider">
+<b>Intersection Size</b>
+<input type="range" min="3" max="25" value="8" id="sizeIntersection" class="slider">
+</div>
+
+<div class="control">
+<label>
+<input type="checkbox" id="toggleMedia" checked>
+Show Media
+</label>
+</div>
+
+<div class="control">
+<b>Media Size</b>
+<input type="range" min="2" max="25" value="6" id="sizeMedia" class="slider">
 </div>
 
 <div class="control">
 <b>Layer Order</b><br>
-<button onclick="bringToFront('intersection-layer')">Intersections Front</button>
-<button onclick="bringToFront('media-layer')">Media Front</button>
+<button onclick="bringFront('intersection-layer')">Intersections Front</button>
+<button onclick="bringFront('media-layer')">Media Front</button>
 </div>
 
-<h2>Section 1: Total Traffic</h2>
-<p>Visualizing overall traffic intensity across intersections.</p>
+<section data-field="count_total">
+<h2>Overall Traffic Volume</h2>
+<p>Total traffic intensity across all intersections.</p>
+</section>
 
-<h2>Section 2: Mode Share</h2>
-<p>Exploring modal composition patterns.</p>
+<section data-field="count_motorbike">
+<h2>Motorbike Count</h2>
+<p>Absolute motorbike flow distribution.</p>
+</section>
+
+<section data-field="count_car">
+<h2>Car Count</h2>
+<p>Absolute car traffic distribution.</p>
+</section>
+
+<section data-field="count_bus">
+<h2>Bus Count</h2>
+<p>Bus traffic concentration across nodes.</p>
+</section>
+
+<section data-field="count_truck">
+<h2>Truck Count</h2>
+<p>Truck movement pattern in the network.</p>
+</section>
+
+<section data-field="count_pedestrian">
+<h2>Pedestrian Count</h2>
+<p>Pedestrian intensity and walkability signals.</p>
+</section>
+
+<section data-field="share_mc" data-type="share">
+<h2>Motorbike Share</h2>
+<p>Proportion of motorbike traffic relative to total flow.</p>
+</section>
+
+<section data-field="share_car" data-type="share">
+<h2>Car Share</h2>
+<p>Relative dominance of car traffic.</p>
+</section>
+
+<section data-field="share_bus" data-type="share">
+<h2>Bus Share</h2>
+<p>Public transport intensity indicator.</p>
+</section>
+
+<section data-field="share_truck" data-type="share">
+<h2>Truck Share</h2>
+<p>Freight distribution pattern.</p>
+</section>
 
 </div>
 <div id="map"></div>
@@ -65,11 +120,9 @@ h2{margin-top:40px}
 
 <script>
 
-mapboxgl.accessToken="pk.eyJ1IjoiZGVmZmllIiwiYSI6ImNtbTNqMmMxODAxaDAycXMyN255eWFwaGIifQ.X5T0rb3Cm_p1wZEYIAGfYQ";
+mapboxgl.accessToken="YOUR_TOKEN_HERE";
 
-const R2_BASE="https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
-const INTERSECTION_CSV="intersection.csv";
-const MEDIA_CSV="media_locations.csv";
+const R2="https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
 
 const map=new mapboxgl.Map({
 container:"map",
@@ -80,7 +133,25 @@ zoom:13
 
 map.addControl(new mapboxgl.NavigationControl());
 
-function csvUrl(n){return R2_BASE+"/"+n;}
+function paletteColors(name){
+if(name==="red") return ["#fee5d9","#fcae91","#fb6a4a","#de2d26","#a50f15"];
+if(name==="green") return ["#edf8e9","#bae4b3","#74c476","#31a354","#006d2c"];
+if(name==="purple") return ["#f2f0f7","#cbc9e2","#9e9ac8","#756bb1","#54278f"];
+return ["#eff3ff","#bdd7e7","#6baed6","#3182bd","#08519c"];
+}
+
+function updateLegend(min,max,colors,isShare){
+document.getElementById("legend").style.background=
+`linear-gradient(to right,${colors.join(",")})`;
+
+if(isShare){
+document.getElementById("legendLabel").innerText=
+`${(min*100).toFixed(1)}% → ${(max*100).toFixed(1)}%`;
+}else{
+document.getElementById("legendLabel").innerText=
+`${min.toFixed(1)} → ${max.toFixed(1)}`;
+}
+}
 
 function toGeo(rows,lon,lat){
 return {
@@ -94,25 +165,17 @@ properties:r
 };
 }
 
-function getPalette(name){
-if(name==="viridis")
-return ["#440154","#3b528b","#21918c","#5ec962","#fde725"];
-if(name==="plasma")
-return ["#0d0887","#7e03a8","#cc4678","#f89441","#f0f921"];
-return ["#2c7bb6","#abd9e9","#ffffbf","#fdae61","#d7191c"];
-}
-
-async function fetchCSV(url){
-return new Promise((res,rej)=>{
-Papa.parse(url,{download:true,header:true,complete:r=>res(r.data)});
+async function loadCSV(name){
+return new Promise(res=>{
+Papa.parse(R2+"/"+name,{download:true,header:true,complete:r=>res(r.data)});
 });
 }
 
 async function init(){
 
 const [iRows,mRows]=await Promise.all([
-fetchCSV(csvUrl(INTERSECTION_CSV)),
-fetchCSV(csvUrl(MEDIA_CSV))
+loadCSV("intersection.csv"),
+loadCSV("media_locations.csv")
 ]);
 
 const iGeo=toGeo(iRows,"lon","lat");
@@ -126,8 +189,8 @@ id:"intersection-layer",
 type:"circle",
 source:"intersections",
 paint:{
-"circle-color":"#2c7bb6",
-"circle-radius":7,
+"circle-color":"#3182bd",
+"circle-radius":8,
 "circle-stroke-width":1,
 "circle-stroke-color":"#333"
 }
@@ -146,28 +209,58 @@ paint:{
 }
 });
 
-const numericCols=Object.keys(iRows[0])
-.filter(k=>!isNaN(parseFloat(iRows[0][k])));
+updateColor("count_total");
 
-const select=document.getElementById("fieldSelect");
-numericCols.forEach(c=>{
-const o=document.createElement("option");
-o.value=c;o.textContent=c;
-select.appendChild(o);
 });
 
-select.value="count_total";
-updateColor();
+function updateColor(field){
 
-select.addEventListener("change",updateColor);
-document.getElementById("paletteSelect")
-.addEventListener("change",updateColor);
+const palette=paletteColors(document.getElementById("palette").value);
 
-document.getElementById("sizeSlider")
+const values=iGeo.features
+.map(f=>+f.properties[field])
+.filter(v=>!isNaN(v));
+
+const min=Math.min(...values);
+const max=Math.max(...values);
+
+const isShare=field.startsWith("share_");
+
+updateLegend(min,max,palette,isShare);
+
+map.setPaintProperty("intersection-layer","circle-color",[
+"interpolate",["linear"],
+["to-number",["get",field]],
+min,palette[0],
+max,palette[4]
+]);
+
+}
+
+document.getElementById("palette").addEventListener("change",()=>{
+const active=document.querySelector("section.active");
+if(active) updateColor(active.dataset.field);
+});
+
+document.getElementById("sizeIntersection")
 .addEventListener("input",e=>{
-map.setPaintProperty("intersection-layer",
-"circle-radius",+e.target.value);
+map.setPaintProperty("intersection-layer","circle-radius",+e.target.value);
 });
+
+document.getElementById("sizeMedia")
+.addEventListener("input",e=>{
+map.setPaintProperty("media-layer","circle-radius",+e.target.value);
+});
+
+document.getElementById("toggleMedia")
+.addEventListener("change",e=>{
+map.setLayoutProperty("media-layer",
+"visibility",e.target.checked?"visible":"none");
+});
+
+window.bringFront=function(id){
+map.moveLayer(id);
+};
 
 map.on("click","intersection-layer",e=>{
 const p=e.features[0].properties;
@@ -180,7 +273,7 @@ map.on("click","media-layer",e=>{
 const p=e.features[0].properties;
 const url=p.URL||p.url;
 let html="";
-if(url.match(/\.(mp4|mov|webm)$/i)){
+if(url && url.match(/\.(mp4|mov|webm)$/i)){
 html=`<video controls src="${url}" width="250"></video>`;
 }else{
 html=`<img src="${url}" width="250">`;
@@ -188,28 +281,19 @@ html=`<img src="${url}" width="250">`;
 new mapboxgl.Popup().setLngLat(e.lngLat).setHTML(html).addTo(map);
 });
 
+const sections=document.querySelectorAll("section");
+const observer=new IntersectionObserver(entries=>{
+entries.forEach(entry=>{
+if(entry.isIntersecting){
+sections.forEach(s=>s.classList.remove("active"));
+entry.target.classList.add("active");
+updateColor(entry.target.dataset.field);
+}
 });
+},{threshold:0.6});
 
-function updateColor(){
-const field=document.getElementById("fieldSelect").value;
-const palette=getPalette(document.getElementById("paletteSelect").value);
+sections.forEach(s=>observer.observe(s));
 
-map.setPaintProperty("intersection-layer","circle-color",[
-"interpolate",["linear"],
-["to-number",["get",field]],
-0,palette[0],
-100,palette[4]
-]);
-
-document.getElementById("legend").style.background=
-`linear-gradient(to right,${palette.join(",")})`;
-}
-
-}
-
-function bringToFront(id){
-const layers=map.getStyle().layers;
-map.moveLayer(id,layers[layers.length-1].id);
 }
 
 init();
