--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Traffic Scroll Story</title>
+<title>Traffic Analysis StoryMap</title>
 
 <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.css" rel="stylesheet"/>
 <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.0/mapbox-gl.js"></script>
@@ -12,22 +12,32 @@
 <style>
 html,body{margin:0;height:100%;font-family:system-ui}
 .container{display:flex;height:100%}
-#story{width:32%;overflow-y:auto;padding:20px;background:#f7f7f7;border-right:1px solid #ddd}
+#story{
+width:32%;
+overflow-y:auto;
+padding:24px;
+background:#f7f7f7;
+border-right:1px solid #ddd;
+}
 #map{flex:1}
 section{margin-bottom:80px}
-h2{margin-top:60px}
+h1{margin-top:0}
+h2{margin-top:50px}
+.control{margin-top:20px}
 .legend{height:14px;border-radius:8px;margin-top:6px}
 .slider{width:100%}
-.control{margin-top:15px}
-button{margin-top:4px}
+button{margin-top:6px}
 </style>
 </head>
 
 <body>
+
 <div class="container">
+
 <div id="story">
 
-<h1>Traffic StoryMap</h1>
+<h1>Traffic Pattern Analysis</h1>
+<p>This scroll-driven map explores traffic intensity and modal structure across observed intersections.</p>
 
 <div class="control">
 <b>Color Palette</b>
@@ -49,13 +59,13 @@ button{margin-top:4px}
 <div class="control">
 <label>
 <input type="checkbox" id="toggleMedia" checked>
-Show Media
+Show Media Points
 </label>
 </div>
 
 <div class="control">
 <b>Media Size</b>
-<input type="range" min="2" max="25" value="6" id="sizeMedia" class="slider">
+<input type="range" min="2" max="20" value="6" id="sizeMedia" class="slider">
 </div>
 
 <div class="control">
@@ -65,62 +75,44 @@ Show Media
 </div>
 
 <section data-field="count_total">
-<h2>Overall Traffic Volume</h2>
-<p>Total traffic intensity across all intersections.</p>
+<h2>Total Traffic Volume</h2>
+<p>Overall traffic intensity across intersections.</p>
 </section>
 
 <section data-field="count_motorbike">
 <h2>Motorbike Count</h2>
-<p>Absolute motorbike flow distribution.</p>
+<p>Spatial distribution of motorbike flow.</p>
 </section>
 
 <section data-field="count_car">
 <h2>Car Count</h2>
-<p>Absolute car traffic distribution.</p>
-</section>
-
-<section data-field="count_bus">
-<h2>Bus Count</h2>
-<p>Bus traffic concentration across nodes.</p>
-</section>
-
-<section data-field="count_truck">
-<h2>Truck Count</h2>
-<p>Truck movement pattern in the network.</p>
+<p>Car traffic intensity across nodes.</p>
 </section>
 
 <section data-field="count_pedestrian">
 <h2>Pedestrian Count</h2>
-<p>Pedestrian intensity and walkability signals.</p>
-</section>
-
-<section data-field="share_mc" data-type="share">
-<h2>Motorbike Share</h2>
-<p>Proportion of motorbike traffic relative to total flow.</p>
+<p>Pedestrian activity level across intersections.</p>
 </section>
 
 <section data-field="share_car" data-type="share">
 <h2>Car Share</h2>
-<p>Relative dominance of car traffic.</p>
+<p>Proportion of car traffic relative to total traffic.</p>
 </section>
 
-<section data-field="share_bus" data-type="share">
-<h2>Bus Share</h2>
-<p>Public transport intensity indicator.</p>
-</section>
-
-<section data-field="share_truck" data-type="share">
-<h2>Truck Share</h2>
-<p>Freight distribution pattern.</p>
+<section data-field="share_mc" data-type="share">
+<h2>Motorbike Share</h2>
+<p>Relative dominance of motorbike trips.</p>
 </section>
 
 </div>
+
 <div id="map"></div>
+
 </div>
 
 <script>
 
-mapboxgl.accessToken="YOUR_TOKEN_HERE";
+mapboxgl.accessToken="pk.eyJ1IjoiZGVmZmllIiwiYSI6ImNtbTNqMmMxODAxaDAycXMyN255eWFwaGIifQ.X5T0rb3Cm_p1wZEYIAGfYQ";
 
 const R2="https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
 
@@ -216,14 +208,9 @@ updateColor("count_total");
 function updateColor(field){
 
 const palette=paletteColors(document.getElementById("palette").value);
-
-const values=iGeo.features
-.map(f=>+f.properties[field])
-.filter(v=>!isNaN(v));
-
+const values=iGeo.features.map(f=>+f.properties[field]).filter(v=>!isNaN(v));
 const min=Math.min(...values);
 const max=Math.max(...values);
-
 const isShare=field.startsWith("share_");
 
 updateLegend(min,max,palette,isShare);
