--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
   // CONFIG
   // =========================
   // Put your *restricted* public token here (pk....)
-  mapboxgl.accessToken = "YOUR_PK_TOKEN_HERE";
+  mapboxgl.accessToken = "pk.eyJ1IjoiZGVmZmllIiwiYSI6ImNtbTNqMmMxODAxaDAycXMyN255eWFwaGIifQ.X5T0rb3Cm_p1wZEYIAGfYQ";
 
   const R2_BASE = "https://pub-5b55ba14d9c048b3988cab9249645020.r2.dev";
   const INTERSECTION_CSV = "intersection.csv";
